rtest/tests/jsr335/Semantics/LambdaExpressions/InnerClasses/ShouldFail/syntax15/Test.java
// .result=COMPILE_FAIL
public class Test {			
	public static void main(String[] args) {
		int a = args[0].length();
		
		class InnerClass {
			void method() {
				a = 0;
			}
		}

    }

}